<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrincipal"
    android:fitsSystemWindows="true"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    tools:context=".ui.view.actividades.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="65dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/moha_beats_removebg_preview" />

    <TextView
        android:id="@+id/lblIniciar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/lblIniciarSesion"
        android:textColor="@color/colorDetalles"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutUsuario"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:hint="@string/correo"
        android:textColorHint="@color/blancoAgradables"
        app:boxBackgroundColor="@color/fondoEditText"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/colorDetalles"
        app:boxStrokeWidth="2dp"
        app:hintTextColor="@color/colorDetalles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblIniciar"
        app:layout_constraintWidth_percent="0.85">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abril_fatface"
            android:inputType="text"
            android:paddingVertical="16dp"
            android:textColor="@color/blancoAgradables" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutContrasena"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/lblContrasena"
        android:textColorHint="@color/blancoAgradables"
        app:boxBackgroundColor="@color/fondoEditText"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/colorDetalles"
        app:boxStrokeWidth="2dp"
        app:hintTextColor="@color/colorDetalles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutUsuario"
        app:layout_constraintWidth_percent="0.85"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/blancoAgradables">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abril_fatface"
            android:inputType="textPassword"
            android:paddingVertical="16dp"
            android:textColor="@color/blancoAgradables" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/lblDenegado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/abril_fatface"
        android:padding="8dp"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/rojo"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/lblRegistrarse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutContrasena"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/lblRegistrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/abril_fatface"
        android:padding="8dp"
        android:text="@string/lblRegistrarse"
        android:textColor="@color/colorDetalles"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/btnIniciar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnIniciar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/colorDetalles"
        android:fontFamily="@font/abril_fatface"
        android:paddingVertical="12dp"
        android:text="@string/lblIniciarSesion"
        android:textSize="20sp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@id/btnInvitado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.85" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnInvitado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@android:color/transparent"
        android:fontFamily="@font/abril_fatface"
        android:paddingVertical="12dp"
        android:text="@string/lblNoInicio"
        android:textColor="@color/blancoAgradables"
        android:textSize="20sp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.85"
        app:strokeColor="@color/blancoAgradables"
        app:strokeWidth="2dp" />
</androidx.constraintlayout.widget.ConstraintLayout>